# backend/internal/feature/transaction/request.go
@@ -5,15 +5,15 @@ type CreateTransactionReq struct {
 	WalletID    uint    `json:"wallet_id"`
 	Amount      float64 `json:"amount" format:"double"`
 	CategoryID  uint    `json:"category_id"`
-	Description string  `json:"description,omitempty"`
+	Description string  `json:"description"`
 	Date        string  `json:"date"`
 } // @name CreateTransactionReq
 
 // UpdateTransactionReq defines payload for updating a transaction.
 type UpdateTransactionReq struct {
-	WalletID    *uint    `json:"wallet_id,omitempty"`
-	Amount      *float64 `json:"amount,omitempty"`
-	CategoryID  *uint    `json:"category_id,omitempty"`
-	Description *string  `json:"description,omitempty"`
-	Date        *string  `json:"date,omitempty"`
+	WalletID    *uint    `json:"wallet_id"`
+	Amount      *float64 `json:"amount" format:"double"`
+	CategoryID  *uint    `json:"category_id"`
+	Description *string  `json:"description"`
+	Date        *string  `json:"date"`
 } // @name UpdateTransactionReq
